--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,23 @@
 body{
+    margin: 0;
+    padding: 0;
     background-color: hsl(217, 54%, 11%);
+}
+main{
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-content: center;
-
 }
 
 .card{
     margin-top: 10vh;
-
+    height: 500px;
     width: 300px;
     background-color: hsl(216, 50%, 16%);
     text-align: center;
     border-radius: 10px;
-
 }
 
 .block-img{
@@ -36,6 +40,7 @@ p{
     font-size:  1rem;
     
 }
+
 .div-container{
     display: flex;
     justify-content: space-between;
@@ -49,15 +54,16 @@ p{
 }
 
 .div-container-img img{
-    width: 10px;
-    height: 12px;
+    width: 11px;
+    height: 13px;
     
 }
 
-.div-container-img p{
+.div-container-img span{
     margin: 0;
     padding-left: 5px;
     font-size: 0.9rem;
+    color: hsl(178, 100%, 50%);
     
 }
 
@@ -67,7 +73,37 @@ p{
     background-color: hsl(215, 32%, 27%);
     height: 1px;
     margin-bottom: 12px;
-    margin-top: 5px;
+    margin-top: 5px;    
+}
 
+.div-avatar{
+    display: flex;
+    padding-left: 20px;
+    align-items: center;
+
+}
+
+.div-avatar img{
+    width: 30px;
+    height: 30px;
+    border: 1px solid hsl(0, 0%, 100%);
+    border-radius: 20px;
+}
+
+.information{
     
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+   
+}
+
+.name-span{
+    color: hsl(0, 0%, 100%);
+}
+
+.information{
+ margin-top: 70px;
+    
+
 }
